Installed a KSS styleguide generator and made a basic structure

--- a/html/content/index.html
+++ b/html/content/index.html
@@ -9,3 +9,6 @@ title: Started up allready?
 
 <h2>Prototype in <em>/html</em></h2>
 <p>You find content in html/content and layouts in html/layouts. We use Metalsmith to compile together content in layouts to produce flat html files that are served in the public folder. Never touch these directly. Work in the html folder instead.</p>
+
+<h2>Styleguide is made automagically</h2>
+<p>We use KSS syntax to make a styleguide from SCSS files comments that can be seen at <a href="/styleguide/">/styleguide/</a></p>
