--- a/html/content/html.html
+++ b/html/content/html.html
@@ -3,3 +3,5 @@ layout: index.html
 title: HTML is valid
 ---
 <p><strong>We</strong> do <em>not</em> like markdown. Feel free to use all HTML as you see fit. Thats what the web is made of after all ;).</p>
+<img src="/assets/images/puppy.jpg" alt="Puppy dog" />
+<p>An images! of puppies if you like.</p>
